CHeck for all certificates
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>